tests/gen/testdata/configs/fail/platform_extension_default_cluster_size_wrong_vcn_prefix.jsonnet
// OKE extension defaults auto-subnetting to the small cluster size profile
// error_contains: OKE auto-subnet profile small requires platform network.vcn prefix /20
{
  hub: { kind: 'hub_e', network: { vcn: '10.0.0.0/21' } },
  environments: {
    prod: {
      platforms: {
        oke: {
          network: { vcn: '10.0.80.0/21' },
          extension: {
            type: 'oke_simple',
            params: {
              kubernetes_version: 'v1.35.2',
              services_cidr: '10.96.0.0/16',
              api_endpoint_allowed_cidrs: ['10.0.1.0/24'],
            },
          },
        },
      },
    },
  },
}
